# ire

./: .gitignore  Cargo.toml  README.md
src/: capture.rs  color.rs  crate_tests.rs  main.rs
src/util/: color.rs  event.rs  input.rs  mod.rs
